add docker deployment

--- a/services/inference_service/.gitignore
+++ b/services/inference_service/.gitignore
@@ -1,1 +1,15 @@
-venv
+# Python
+venv/
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.db
+*.sqlite3
+
+# Environment variables
+.env
+
+# Docker
+# Dockerfile
+# docker-compose.yml
